[gd_scene load_steps=14 format=3 uid="uid://clyvckkgasugt"]

[ext_resource type="Script" uid="uid://bo7cmm3c22xll" path="res://scripts/rocket.gd" id="1_8kmw3"]
[ext_resource type="Theme" uid="uid://c0es2kte6qmmp" path="res://scripts/normal.tres" id="3_agf72"]
[ext_resource type="Script" uid="uid://cxdo610c8we7b" path="res://scripts/display_1.gd" id="4_y2y7n"]
[ext_resource type="Texture2D" uid="uid://corhksc3axq45" path="res://assets/rockcoin.png" id="6_g6bar"]
[ext_resource type="Texture2D" uid="uid://8we810a6fxly" path="res://assets/steelplate.png" id="6_hhimn"]
[ext_resource type="Texture2D" uid="uid://r3a3lvr8h25f" path="res://assets/space3.jpg" id="7_fa8w1"]
[ext_resource type="Script" uid="uid://dg2yw3k74hrpy" path="res://scripts/coin_label.gd" id="7_qolsk"]
[ext_resource type="Texture2D" uid="uid://c87jaiganj6cp" path="res://assets/steelengine.png" id="7_t2h4l"]
[ext_resource type="Texture2D" uid="uid://ctkorshjsddf2" path="res://assets/steelfin.png" id="8_ctxcg"]
[ext_resource type="Texture2D" uid="uid://cvo2initupppu" path="res://assets/steeltank.png" id="9_fv27l"]

[sub_resource type="Animation" id="Animation_g6bar"]
resource_name = "craft_rocket"
length = 3.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Fins2:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 2.7),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(60, 182), Vector2(227, 356), Vector2(60, 182)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Fins2:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3, 2.7),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0.5, 0.5), Vector2(0.25, 0.25), Vector2(0.5, 0.5)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Fins2:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.15, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("TopCone1:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.3, 0.6, 2.7),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0.5, 0.5), Vector2(0.25, 0.25), Vector2(0.5, 0.5)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("TopCone1:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0.3, 0.6, 2.7),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(200, 182), Vector2(227, 356), Vector2(200, 182)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("TopCone1:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0.45, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Fins1:modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0.75, 0.9),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("Fins1:scale")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0.6, 0.9, 2.7),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0.5, 0.5), Vector2(0.25, 0.25), Vector2(0.5, 0.5)]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("Fins1:position")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0.6, 0.9, 2.7),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(330, 182), Vector2(227, 356), Vector2(330, 182)]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("Plating1:position")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0.9, 1.2, 2.7),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(60, 332), Vector2(227, 356), Vector2(60, 332)]
}
tracks/10/type = "value"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("Plating1:scale")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"times": PackedFloat32Array(0.9, 1.2, 2.7),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0.5, 0.5), Vector2(0.25, 0.25), Vector2(0.5, 0.5)]
}
tracks/11/type = "value"
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/path = NodePath("Plating1:modulate")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/keys = {
"times": PackedFloat32Array(1.05, 1.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/12/type = "value"
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/path = NodePath("Plating2:scale")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/keys = {
"times": PackedFloat32Array(1.2, 1.5, 2.7),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0.5, 0.5), Vector2(0.25, 0.25), Vector2(0.5, 0.5)]
}
tracks/13/type = "value"
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/path = NodePath("Plating2:position")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/keys = {
"times": PackedFloat32Array(1.2, 1.5, 2.7),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(330, 332), Vector2(227, 356), Vector2(330, 332)]
}
tracks/14/type = "value"
tracks/14/imported = false
tracks/14/enabled = true
tracks/14/path = NodePath("Plating2:modulate")
tracks/14/interp = 1
tracks/14/loop_wrap = true
tracks/14/keys = {
"times": PackedFloat32Array(1.35, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/15/type = "value"
tracks/15/imported = false
tracks/15/enabled = true
tracks/15/path = NodePath("Tank1:position")
tracks/15/interp = 1
tracks/15/loop_wrap = true
tracks/15/keys = {
"times": PackedFloat32Array(1.5, 1.8, 2.7),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(60, 482), Vector2(227, 356), Vector2(60, 482)]
}
tracks/16/type = "value"
tracks/16/imported = false
tracks/16/enabled = true
tracks/16/path = NodePath("Tank1:scale")
tracks/16/interp = 1
tracks/16/loop_wrap = true
tracks/16/keys = {
"times": PackedFloat32Array(1.5, 1.8, 2.7),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0.5, 0.5), Vector2(0.25, 0.25), Vector2(0.5, 0.5)]
}
tracks/17/type = "value"
tracks/17/imported = false
tracks/17/enabled = true
tracks/17/path = NodePath("Tank1:modulate")
tracks/17/interp = 1
tracks/17/loop_wrap = true
tracks/17/keys = {
"times": PackedFloat32Array(1.65, 1.8),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/18/type = "value"
tracks/18/imported = false
tracks/18/enabled = true
tracks/18/path = NodePath("Engine1:scale")
tracks/18/interp = 1
tracks/18/loop_wrap = true
tracks/18/keys = {
"times": PackedFloat32Array(1.8, 2.1, 2.7),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0.5, 0.5), Vector2(0.25, 0.25), Vector2(0.5, 0.5)]
}
tracks/19/type = "value"
tracks/19/imported = false
tracks/19/enabled = true
tracks/19/path = NodePath("Engine1:position")
tracks/19/interp = 1
tracks/19/loop_wrap = true
tracks/19/keys = {
"times": PackedFloat32Array(1.8, 2.1, 2.7),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(200, 482), Vector2(227, 356), Vector2(200, 482)]
}
tracks/20/type = "value"
tracks/20/imported = false
tracks/20/enabled = true
tracks/20/path = NodePath("Engine1:modulate")
tracks/20/interp = 1
tracks/20/loop_wrap = true
tracks/20/keys = {
"times": PackedFloat32Array(1.95, 2.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/21/type = "value"
tracks/21/imported = false
tracks/21/enabled = true
tracks/21/path = NodePath("Tank2:scale")
tracks/21/interp = 1
tracks/21/loop_wrap = true
tracks/21/keys = {
"times": PackedFloat32Array(2.1, 2.4, 2.7),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0.5, 0.5), Vector2(0.25, 0.25), Vector2(0.5, 0.5)]
}
tracks/22/type = "value"
tracks/22/imported = false
tracks/22/enabled = true
tracks/22/path = NodePath("Tank2:position")
tracks/22/interp = 1
tracks/22/loop_wrap = true
tracks/22/keys = {
"times": PackedFloat32Array(2.1, 2.4, 2.7),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(330, 482), Vector2(227, 356), Vector2(330, 482)]
}
tracks/23/type = "value"
tracks/23/imported = false
tracks/23/enabled = true
tracks/23/path = NodePath("Tank2:modulate")
tracks/23/interp = 1
tracks/23/loop_wrap = true
tracks/23/keys = {
"times": PackedFloat32Array(2.25, 2.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/24/type = "value"
tracks/24/imported = false
tracks/24/enabled = true
tracks/24/path = NodePath("Rocket:modulate")
tracks/24/interp = 1
tracks/24/loop_wrap = true
tracks/24/keys = {
"times": PackedFloat32Array(2.3, 2.9, 3.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1)]
}
tracks/25/type = "value"
tracks/25/imported = false
tracks/25/enabled = true
tracks/25/path = NodePath("Rocket:scale")
tracks/25/interp = 1
tracks/25/loop_wrap = true
tracks/25/keys = {
"times": PackedFloat32Array(2.3, 2.9),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0.5, 0.5), Vector2(1, 1)]
}
tracks/26/type = "value"
tracks/26/imported = false
tracks/26/enabled = true
tracks/26/path = NodePath("Rocket:position")
tracks/26/interp = 1
tracks/26/loop_wrap = true
tracks/26/keys = {
"times": PackedFloat32Array(2.3, 2.9),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(198, 329), Vector2(134, 265)]
}

[sub_resource type="Animation" id="Animation_1nvrn"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Fins2:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(60, 182)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Fins2:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.5, 0.5)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Fins2:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("TopCone1:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.5, 0.5)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("TopCone1:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(200, 182)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("TopCone1:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Fins1:modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("Fins1:scale")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.5, 0.5)]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("Fins1:position")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(330, 182)]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("Plating1:position")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(60, 332)]
}
tracks/10/type = "value"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("Plating1:scale")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.5, 0.5)]
}
tracks/11/type = "value"
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/path = NodePath("Plating1:modulate")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/12/type = "value"
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/path = NodePath("Plating2:scale")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.5, 0.5)]
}
tracks/13/type = "value"
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/path = NodePath("Plating2:position")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(330, 332)]
}
tracks/14/type = "value"
tracks/14/imported = false
tracks/14/enabled = true
tracks/14/path = NodePath("Plating2:modulate")
tracks/14/interp = 1
tracks/14/loop_wrap = true
tracks/14/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/15/type = "value"
tracks/15/imported = false
tracks/15/enabled = true
tracks/15/path = NodePath("Tank1:position")
tracks/15/interp = 1
tracks/15/loop_wrap = true
tracks/15/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(60, 482)]
}
tracks/16/type = "value"
tracks/16/imported = false
tracks/16/enabled = true
tracks/16/path = NodePath("Tank1:scale")
tracks/16/interp = 1
tracks/16/loop_wrap = true
tracks/16/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.5, 0.5)]
}
tracks/17/type = "value"
tracks/17/imported = false
tracks/17/enabled = true
tracks/17/path = NodePath("Tank1:modulate")
tracks/17/interp = 1
tracks/17/loop_wrap = true
tracks/17/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/18/type = "value"
tracks/18/imported = false
tracks/18/enabled = true
tracks/18/path = NodePath("Engine1:scale")
tracks/18/interp = 1
tracks/18/loop_wrap = true
tracks/18/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.5, 0.5)]
}
tracks/19/type = "value"
tracks/19/imported = false
tracks/19/enabled = true
tracks/19/path = NodePath("Engine1:position")
tracks/19/interp = 1
tracks/19/loop_wrap = true
tracks/19/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(200, 482)]
}
tracks/20/type = "value"
tracks/20/imported = false
tracks/20/enabled = true
tracks/20/path = NodePath("Engine1:modulate")
tracks/20/interp = 1
tracks/20/loop_wrap = true
tracks/20/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/21/type = "value"
tracks/21/imported = false
tracks/21/enabled = true
tracks/21/path = NodePath("Tank2:scale")
tracks/21/interp = 1
tracks/21/loop_wrap = true
tracks/21/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.5, 0.5)]
}
tracks/22/type = "value"
tracks/22/imported = false
tracks/22/enabled = true
tracks/22/path = NodePath("Tank2:position")
tracks/22/interp = 1
tracks/22/loop_wrap = true
tracks/22/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(330, 482)]
}
tracks/23/type = "value"
tracks/23/imported = false
tracks/23/enabled = true
tracks/23/path = NodePath("Tank2:modulate")
tracks/23/interp = 1
tracks/23/loop_wrap = true
tracks/23/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/24/type = "value"
tracks/24/imported = false
tracks/24/enabled = true
tracks/24/path = NodePath("Rocket:modulate")
tracks/24/interp = 1
tracks/24/loop_wrap = true
tracks/24/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/25/type = "value"
tracks/25/imported = false
tracks/25/enabled = true
tracks/25/path = NodePath("Rocket:scale")
tracks/25/interp = 1
tracks/25/loop_wrap = true
tracks/25/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.5, 0.5)]
}
tracks/26/type = "value"
tracks/26/imported = false
tracks/26/enabled = true
tracks/26/path = NodePath("Rocket:position")
tracks/26/interp = 1
tracks/26/loop_wrap = true
tracks/26/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(198, 329)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_qolsk"]
_data = {
&"RESET": SubResource("Animation_1nvrn"),
&"craft_rocket": SubResource("Animation_g6bar")
}

[node name="Node2D" type="Node2D"]
script = ExtResource("1_8kmw3")

[node name="Display1" type="RichTextLabel" parent="."]
texture_filter = 1
offset_left = 15.0
offset_top = 76.0
offset_right = 452.0
offset_bottom = 190.0
theme = ExtResource("3_agf72")
bbcode_enabled = true
autowrap_mode = 2
horizontal_alignment = 1
script = ExtResource("4_y2y7n")

[node name="TutorialLabel" type="Label" parent="."]
texture_filter = 1
offset_left = 393.0
offset_top = -3.0
offset_right = 1064.0
offset_bottom = 49.0
theme = ExtResource("3_agf72")
theme_override_font_sizes/font_size = 40
text = "Build your own rocket!"
horizontal_alignment = 1

[node name="BackButton" type="Button" parent="."]
offset_left = 28.0
offset_top = 595.0
offset_right = 187.0
offset_bottom = 639.0
theme = ExtResource("3_agf72")
text = "<-- Back"

[node name="CoinDisplay" type="Node2D" parent="."]

[node name="TextureRect" type="TextureRect" parent="CoinDisplay"]
texture_filter = 1
offset_left = 4.0
offset_top = 3.0
offset_right = 44.0
offset_bottom = 43.0
scale = Vector2(1.5, 1.5)
texture = ExtResource("6_g6bar")

[node name="CoinLabel" type="Label" parent="CoinDisplay"]
texture_filter = 1
offset_left = 67.0
offset_top = 3.0
offset_right = 184.0
offset_bottom = 64.0
theme = ExtResource("3_agf72")
theme_override_font_sizes/font_size = 50
script = ExtResource("7_qolsk")

[node name="CraftButton" type="Button" parent="."]
offset_left = 600.0
offset_top = 595.0
offset_right = 801.0
offset_bottom = 639.0
theme = ExtResource("3_agf72")
text = "Craft Rocket"

[node name="UpgradePlatingButton" type="Button" parent="."]
offset_left = 952.0
offset_top = 152.0
offset_right = 1138.0
offset_bottom = 196.0
theme = ExtResource("3_agf72")
text = "Upgrade"

[node name="UpgradeEngineButton" type="Button" parent="."]
offset_left = 952.0
offset_top = 222.0
offset_right = 1139.0
offset_bottom = 266.0
theme = ExtResource("3_agf72")
text = "Upgrade"

[node name="UpgradeFinsButton" type="Button" parent="."]
offset_left = 960.0
offset_top = 301.0
offset_right = 1132.0
offset_bottom = 345.0
theme = ExtResource("3_agf72")
text = "Upgrade"

[node name="UpgradeTopConeButton" type="Button" parent="."]
offset_left = 946.0
offset_top = 379.0
offset_right = 1149.0
offset_bottom = 423.0
theme = ExtResource("3_agf72")
text = "Upgrade"

[node name="UpgradeTankButton" type="Button" parent="."]
offset_left = 952.0
offset_top = 445.0
offset_right = 1144.0
offset_bottom = 489.0
theme = ExtResource("3_agf72")
text = "Upgrade"

[node name="Plating1" type="TextureRect" parent="."]
texture_filter = 1
offset_left = 60.0
offset_top = 332.0
offset_right = 277.99963
offset_bottom = 550.00024
scale = Vector2(0.5, 0.5)
texture = ExtResource("6_hhimn")

[node name="Plating2" type="TextureRect" parent="."]
texture_filter = 1
offset_left = 330.0
offset_top = 332.0
offset_right = 548.00024
offset_bottom = 550.0004
scale = Vector2(0.5, 0.5)
texture = ExtResource("6_hhimn")

[node name="Engine1" type="TextureRect" parent="."]
texture_filter = 1
offset_left = 200.0
offset_top = 482.0
offset_right = 417.99963
offset_bottom = 700.0001
scale = Vector2(0.5, 0.5)
texture = ExtResource("7_t2h4l")

[node name="Fins1" type="TextureRect" parent="."]
texture_filter = 1
offset_left = 330.0
offset_top = 182.0
offset_right = 548.0001
offset_bottom = 399.9994
scale = Vector2(0.5, 0.5)
texture = ExtResource("8_ctxcg")

[node name="Fins2" type="TextureRect" parent="."]
texture_filter = 1
offset_left = 60.0
offset_top = 182.0
offset_right = 278.00064
offset_bottom = 400.0015
scale = Vector2(0.5, 0.5)
texture = ExtResource("8_ctxcg")

[node name="Tank1" type="TextureRect" parent="."]
texture_filter = 1
offset_left = 60.0
offset_top = 482.0
offset_right = 278.0003
offset_bottom = 699.9996
scale = Vector2(0.5, 0.5)
texture = ExtResource("9_fv27l")

[node name="Tank2" type="TextureRect" parent="."]
texture_filter = 1
offset_left = 330.0
offset_top = 482.0
offset_right = 548.00006
offset_bottom = 699.9999
scale = Vector2(0.5, 0.5)
texture = ExtResource("9_fv27l")

[node name="TopCone1" type="TextureRect" parent="."]
texture_filter = 1
offset_left = 200.0
offset_top = 182.0
offset_right = 417.99945
offset_bottom = 399.99976
scale = Vector2(0.5, 0.5)
texture = ExtResource("7_t2h4l")

[node name="Rocket" type="TextureRect" parent="."]
modulate = Color(1, 1, 1, 0)
texture_filter = 1
offset_left = 198.0
offset_top = 329.0
offset_right = 416.00003
offset_bottom = 547.0
scale = Vector2(0.5, 0.5)
stretch_mode = 5

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_qolsk")
}

[node name="LaunchButton" type="Button" parent="."]
offset_left = 961.0
offset_top = 598.0
offset_right = 1140.0
offset_bottom = 642.0
theme = ExtResource("3_agf72")
text = "Launch -->"

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -1

[node name="TextureRect" type="TextureRect" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("7_fa8w1")
expand_mode = 3

[node name="PlatingLabel" type="Label" parent="."]
offset_left = 499.0
offset_top = 150.0
offset_right = 608.0
offset_bottom = 188.0
theme = ExtResource("3_agf72")
text = "Plating"

[node name="PartLabel" type="Label" parent="."]
offset_left = 499.0
offset_top = 85.0
offset_right = 608.0
offset_bottom = 123.0
theme = ExtResource("3_agf72")
text = "Part"
horizontal_alignment = 1

[node name="CostLabel" type="Label" parent="."]
offset_left = 731.0
offset_top = 85.0
offset_right = 840.0
offset_bottom = 123.0
theme = ExtResource("3_agf72")
text = "Cost"
horizontal_alignment = 1

[node name="Upgrade!" type="Label" parent="."]
offset_left = 971.0
offset_top = 85.0
offset_right = 1116.0
offset_bottom = 123.0
theme = ExtResource("3_agf72")
text = "Upgrade!"
horizontal_alignment = 1

[node name="EngineLabel" type="Label" parent="."]
offset_left = 499.0
offset_top = 222.0
offset_right = 610.0
offset_bottom = 260.0
theme = ExtResource("3_agf72")
text = "Engine"

[node name="PlatingCost" type="RichTextLabel" parent="."]
offset_left = 662.0
offset_top = 150.0
offset_right = 936.0
offset_bottom = 188.0
theme = ExtResource("3_agf72")
bbcode_enabled = true
horizontal_alignment = 1

[node name="EngineCost" type="RichTextLabel" parent="."]
offset_left = 662.0
offset_top = 222.0
offset_right = 936.0
offset_bottom = 260.0
theme = ExtResource("3_agf72")
bbcode_enabled = true
horizontal_alignment = 1

[node name="FinsCost" type="RichTextLabel" parent="."]
offset_left = 662.0
offset_top = 306.0
offset_right = 936.0
offset_bottom = 344.0
theme = ExtResource("3_agf72")
bbcode_enabled = true
horizontal_alignment = 1

[node name="TankCost" type="RichTextLabel" parent="."]
offset_left = 662.0
offset_top = 447.0
offset_right = 936.0
offset_bottom = 485.0
theme = ExtResource("3_agf72")
bbcode_enabled = true
horizontal_alignment = 1

[node name="TopconeCost" type="RichTextLabel" parent="."]
offset_left = 662.0
offset_top = 378.0
offset_right = 936.0
offset_bottom = 416.0
theme = ExtResource("3_agf72")
bbcode_enabled = true
horizontal_alignment = 1

[node name="FinsLabel" type="Label" parent="."]
offset_left = 499.0
offset_top = 306.0
offset_right = 608.0
offset_bottom = 344.0
theme = ExtResource("3_agf72")
text = "Fins"

[node name="TopconeLabel" type="Label" parent="."]
offset_left = 499.0
offset_top = 382.0
offset_right = 645.0
offset_bottom = 420.0
theme = ExtResource("3_agf72")
text = "Top Cone"

[node name="TankLabel" type="Label" parent="."]
offset_left = 499.0
offset_top = 447.0
offset_right = 645.0
offset_bottom = 485.0
theme = ExtResource("3_agf72")
text = "Tanks"

[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="LaunchButton" to="." method="_on_launch_button_pressed"]
